--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"daisyui": "^5.3.1",
 		"dockerode": "^4.0.9",
 		"marked": "^16.4.0",
-		"svelte-monaco": "^1.0.4"
+		"svelte-monaco": "^1.0.4",
+		"tar-stream": "^3.1.7"
 	}
 }
