--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-        "vitest": "^1.1.5",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
@@ -25,13 +24,15 @@
 		"svelte-check": "^4.3.2",
 		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"vitest": "^1.1.5"
 	},
 	"dependencies": {
 		"daisyui": "^5.3.1",
 		"dockerode": "^4.0.9",
 		"marked": "^16.4.0",
 		"svelte-monaco": "^1.0.4",
-		"tar-stream": "^3.1.7"
+		"tar-stream": "^3.1.7",
+		"uuid": "^13.0.0"
 	}
 }
