--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 	"dependencies": {
 		"daisyui": "^5.3.1",
 		"dockerode": "^4.0.9",
+		"firebase": "^12.6.0",
 		"marked": "^16.4.0",
+		"qrcode": "^1.5.4",
 		"svelte-monaco": "^1.0.4",
 		"tar-stream": "^3.1.7",
 		"uuid": "^13.0.0"
